<?xml version="1.0"?>
<package format="2">
  <name>memmo_laas_models</name>
  <version>0.0.0</version>
  <description>The memmo_laas_models package</description>

  <maintainer email="ostasse@laas.fr">ostasse</maintainer>
  <license>2-clause-bsd</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
